Fix：Fix line number display out of bounds

--- a/style/index.scss
+++ b/style/index.scss
@@ -3,6 +3,10 @@
         overflow: unset;
         margin-bottom: var(--codeblocks-margin-bottom);
 
+        > .line-numbers-wrapper {
+            overflow: hidden;
+        }
+
         > .codeblocks-mask {
             display: block;
             position: absolute;
